Write an introduction and quick start guide

--- a/book.toml
+++ b/book.toml
@@ -2,4 +2,4 @@
 authors = ["Matti Airas"]
 language = "en"
 src = "src"
-title = "HALPI2 Embedded Pi Computer User Guide"
+title = "HALPI2 Pi Computer User Guide"
